--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="card" style="animation-delay: 0.2s">
                 <span class="card-icon">🎯</span>
                 <h3>Thành Công Rực Rỡ</h3>
-                <p>Chúc các bạn đạt được những mục tiêu đề ra, thi đại học thành công và có tương lai tươi sáng!</p>
+                <p>Chúc các bạn đạt được những mục tiêu đề ra, thi tốt nghiệp THPT thành công và có tương lai tươi sáng!</p>
             </div>
 
             <div class="card" style="animation-delay: 0.3s">
@@ -301,7 +301,7 @@
         </div>
 
         <div class="message-box">
-            <h2>🎉 LỌI CHÚC ĐẶC BIỆT 🎉</h2>
+            <h2>🎉 LỜI CHÚC ĐẶC BIỆT 🎉</h2>
             <p>Chúc các chàng trai lớp 12C10 luôn khỏe mạnh, tự tin và thành công!</p>
             <p>Các bạn là niềm tự hào của lớp, là những người bạn tuyệt vời!</p>
             <p>Hãy luôn giữ vững tinh thần lạc quan, nhiệt huyết và không ngừng phấn đấu!</p>
@@ -312,7 +312,7 @@
 
         <div class="footer">
             <p>💙 Gửi đến các bạn nam 12C10 với tất cả tình cảm 💙</p>
-            <p style="margin-top: 10px; font-style: italic;">19/11/2024 - Ngày Quốc Tế Nam Giới</p>
+            <p style="margin-top: 10px; font-style: italic;">19/11/2025 - Ngày Quốc Tế Nam Giới</p>
         </div>
     </div>
 
